--- a/src/app/menu1/menu1.page.html
+++ b/src/app/menu1/menu1.page.html
@@ -22,7 +22,7 @@
       </ion-col>
       <!-- Botón para Notificaciones -->
       <ion-col>
-        <ion-button class="ion-activatable ripple-parent circle" fill="clear">
+        <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/menunoti', grupoid]">
           <ion-icon size="large" src="assets/icon/Noti.svg" size="large"></ion-icon>
         </ion-button>
         <ion-label>Notificaciones</ion-label>
