--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -51,9 +51,11 @@
                 </ion-col>
             </ion-row>
             <ion-row class="ion-justify-content-center ion-text-center">
-                <ion-col size="8">
-                    <ion-button fill="outline">Iniciar</ion-button>
-                </ion-col>
+                <ion-col size="12">
+                    <p class="ion-text-center">
+                      <ion-button type="submit" expand="block" [disabled]="!login.valid">Enviar</ion-button>
+                    </p>
+                  </ion-col>
             </ion-row>
         </ion-grid>
     </form>
