--- a/src/app/menunoti/menunoti.page.html
+++ b/src/app/menunoti/menunoti.page.html
@@ -1,8 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Grupo 
-    </ion-title>
+<!-- Boton para regresar -->    
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Grupo</ion-title>
   </ion-toolbar>
 </ion-header>
 
