--- a/src/app/grade/grade.page.html
+++ b/src/app/grade/grade.page.html
@@ -48,7 +48,7 @@
             <ion-item 
             [button]="true" 
             [detail]="false"
-            (click)="alertEliminado(grade.gra_id)"> 
+            (click)="eliminar(grade.gra_id)"> 
             <ion-icon name="trash"></ion-icon>
             Eliminar
             </ion-item>
