--- a/src/app/group/group.page.html
+++ b/src/app/group/group.page.html
@@ -97,5 +97,13 @@
     <ion-fab-button [routerLink]="['/classroom']">
       <ion-icon name="business"></ion-icon>
     </ion-fab-button>
+    <!-- Tabla Major -->
+    <ion-fab-button [routerLink]="['/major']">
+      <ion-icon name="cash-outline"></ion-icon>
+    </ion-fab-button>
+    <!-- Tabla Subject -->
+    <ion-fab-button [routerLink]="['/subject']">
+      <ion-icon name="bookmarks-outline"></ion-icon>
+    </ion-fab-button>
   </ion-fab-list>
 </ion-fab>
