--- a/src/app/alumno-form/alumno-form.page.html
+++ b/src/app/alumno-form/alumno-form.page.html
@@ -10,13 +10,10 @@
 
   <ion-title class="titulo">Bienvenido a la Aplicacion</ion-title>
   <form [formGroup]="registro" (ngSubmit)="submitRegistrar()">
-
     <main class="">
       <ion-grid class="">
         <ion-row class="">
-
           <!-- Mostrar la parte del maestro si la opción seleccionada es 1 -->
-
           <ion-text>
             <h1 class="fuente">Datos Maestros</h1>
           </ion-text>
@@ -68,38 +65,38 @@
             <ion-input label="Email" label-placement="floating" fill="outline" type="email"
               placeholder="email@domain.com" formControlName="per_email"></ion-input>
             <div id="note" *ngFor="let validation of
-              validation_messages.per_mail">
-              <ion-note color="danger" *ngIf="getError('per_mail')[(validation.type)]">
+              validation_messages.per_email">
+              <ion-note color="danger" *ngIf="getError('per_email')[(validation.type)]">
                 <ion-icon name="information-circle-outline"></ion-icon> {{
                 validation.message }}
               </ion-note>
             </div>
           </ion-col>
-
+          <!-- Datos de inicio -->
           <ion-text class="ion-margin">Datos de inicio</ion-text>
           <ion-col size="12">
-            <ion-input label="Username" label-placement="floating" fill="outline" placeholder="Username"
-              formControlName="username"></ion-input>
-            <div id="note" *ngFor="let validation of
-              validation_messages.username">
+            <ion-item counter="true">
+              <ion-label position="floating" color="primary">Usuario</ion-label>
+              <ion-input type="text" formControlName="username" class="form-control" [maxlength]="10"></ion-input>
+            </ion-item>
+            <div id="note" *ngFor="let validation of validation_messages.username">
               <ion-note color="danger" *ngIf="getError('username')[(validation.type)]">
-                <ion-icon name="information-circle-outline"></ion-icon> {{
-                validation.message }}
+                <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
               </ion-note>
             </div>
           </ion-col>
           <ion-col size="12">
-            <ion-item>
+            <ion-item counter="true">
               <ion-label position="floating" color="primary">Contraseña</ion-label>
-              <ion-input #passwordEyeRegister [type]="passwordTypeInput" formControlName="password" clearOnEdit="false"
-                class="form-control">
+              <ion-input #passwordEyeRegister [type]="passwordTypeInput" formControlName="password"
+                clearOnEdit="false" class="form-control" [maxlength]="15">
               </ion-input>
               <button slot="end" class="btn_eye_icon" (click)="togglePasswordMode()">
                 <ion-icon [name]="(passwordTypeInput === 'text')?'eye-off':'eye'" color="primary"></ion-icon>
               </button>
             </ion-item>
             <div id="note" *ngFor="let validation of
-                validation_messages.password">
+              validation_messages.password">
               <ion-note color="danger" *ngIf="getError('password')[(validation.type)]">
                 <ion-icon name="information-circle-outline"></ion-icon> {{
                 validation.message }}
@@ -117,15 +114,13 @@
               </button>
             </ion-item>
             <div id="note" *ngFor="let validation of
-                validation_messages.password_confirm">
+              validation_messages.password_confirm">
               <ion-note color="danger" *ngIf="getError('password_confirm')[(validation.type)]">
                 <ion-icon name="information-circle-outline"></ion-icon> {{
                 validation.message }}
               </ion-note>
             </div>
           </ion-col>
-
-
           <ion-col size="12">
             <p class="ion-text-center">
               <ion-button type="submit" expand="block" [disabled]="!registro.valid">Guardar</ion-button>
@@ -133,10 +128,6 @@
           </ion-col>
         </ion-row>
       </ion-grid>
-
     </main>
-
-
   </form>
-
 </ion-content>
