--- a/src/app/generar-codigo/generar-codigo.page.html
+++ b/src/app/generar-codigo/generar-codigo.page.html
@@ -10,57 +10,25 @@
 <ion-content [fullscreen]="true">
   <form [formGroup]="codigo" (ngSubmit)="guardarDatos()">
     <ion-grid> <!-- Cuadrícula de diseño -->
-      <ion-row> <!-- Fila de la cuadrícula -->
-        <ion-col size="12"> <!-- Columna con tamaño completo (12) -->
-          <ion-item>
-            <ion-label position="floating" color="primary">Codigo</ion-label>
-            <ion-input type="text" formControlName="cod_code" class="form-control"></ion-input>
-          </ion-item>
-          <div id="note" *ngFor="let validation of mensajes_validacion.cod_code">
-            <ion-note color="danger" *ngIf="getError('cod_code')[(validation.type)]">
-              <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
-            </ion-note>
-          </div>
-        </ion-col>
-
-        <ion-col size="12">
-          <ion-item>
-            <ion-label position="floating" color="primary">Hora</ion-label>
-            <ion-input type="text" formControlName="cod_time" class="form-control"></ion-input>
-          </ion-item>
-          <div id="note" *ngFor="let validation of
-            mensajes_validacion.cod_time">
-            <ion-note color="danger" *ngIf="getError('cod_time')[(validation.type)]">
-              <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
-            </ion-note>
-          </div>
-        </ion-col>
-        <ion-col size="12">
-          <ion-item>
-            <ion-label position="floating" color="primary">Fecha</ion-label>
-            <ion-input type="text" formControlName="cod_date" class="form-control"></ion-input>
-          </ion-item>
-          <div id="note" *ngFor="let validation of
-            mensajes_validacion.cod_date">
-            <ion-note color="danger" *ngIf="getError('cod_date')[(validation.type)]">
-              <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
-            </ion-note>
-          </div>
-        </ion-col>
-        <ion-col size="12">
-          <ion-item>
-            <ion-label position="floating" color="primary">Duracion</ion-label>
-            <ion-input type="number" placeholder="000" formControlName="cod_duration" class="form-control"></ion-input>
-          </ion-item>
+      <ion-row class="ion-justify-content-center ion-align-items-center">
+        <ion-thumbnail size="">
+          <ion-icon name="qr-code-outline" size="large"></ion-icon>
+        </ion-thumbnail>
+      </ion-row>
+      <ion-row class="ion-justify-content-center "> <!-- Fila de la cuadrícula -->
+        <ion-col size="12" class="ion-justify-content-center "> <!-- Columna con tamaño completo (12) -->
+          <ion-datetime presentation="time" formControlName="cod_duration"></ion-datetime>
           <div id="note" *ngFor="let validation of mensajes_validacion.cod_duration">
             <ion-note color="danger" *ngIf="getError('cod_duration')[(validation.type)]">
               <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
             </ion-note>
           </div>
         </ion-col>
+      </ion-row>
+      <ion-row class="ion-justify-content-center ion-text-center">
         <ion-col size="12">
           <p class="ion-text-center">
-            <ion-button type="submit" [disabled]="!codigo.valid">Guardar</ion-button>
+            <ion-button type="submit" expand="block" [disabled]="!codigo.valid">Enviar</ion-button>
           </p>
         </ion-col>
       </ion-row>
