--- a/src/app/alumno-form/alumno-form.page.scss
+++ b/src/app/alumno-form/alumno-form.page.scss
@@ -45,7 +45,14 @@ main {
 
 }
 
+img {
+    --height: 100px;
+}
 
+ion-thumbnail {
+    --size: 10rem;
+    --border-radius: 14px;
+}
 
 div {
     margin-top: 0.5rem;
