--- a/src/app/asistencia/asistencia.page.html
+++ b/src/app/asistencia/asistencia.page.html
@@ -1,10 +1,9 @@
-<ion-header [translucent]="true" class="ion-no-border">
+<ion-header class="ion-no-border  ">
   <ion-toolbar>
-    <!--     Boton para regresar
- --> <ion-buttons slot="start">
-  <ion-back-button></ion-back-button>
-</ion-buttons>
-    <ion-title>Asistencia {{grupoid}}</ion-title>
+      <ion-buttons slot="start">
+          <ion-back-button default-href="#" routerLink="/"></ion-back-button>
+          <ion-title class="dark">Regresar</ion-title>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
