--- a/src/app/codigos/codigos.page.html
+++ b/src/app/codigos/codigos.page.html
@@ -13,7 +13,7 @@
   <ion-searchbar class="custom"></ion-searchbar>
 
   <ion-list [inset]="true">
-    <ion-item-sliding button *ngFor="let codigo of codigos">
+    <ion-item-sliding button *ngFor="let codigo of data">
       <ion-item>
         <ion-label class="ion-text-wrap">
           <h2>{{codigo.cod_code}}</h2>
