Acciones de extracurriculares

--- a/src/app/notextracurricular/notextracurricular.page.html
+++ b/src/app/notextracurricular/notextracurricular.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Mis eventos </ion-title>
+    <ion-title>Eventos Asignados</ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref=""></ion-back-button>
     </ion-buttons>
@@ -13,31 +13,32 @@
   <ion-searchbar [debounce]="1000" (ionInput)="handleInput($event)" placeholder="Buscar..."></ion-searchbar>
 
   <ion-grid>
-    <ion-row *ngFor="let extra of extras">
+    <!-- MODIFICACIONES----------------------------------------------------------- -->
+    <ion-row *ngFor="let extras of extra; let i = index">
+      <!-- MODIFICACIONES----------------------------------------------------------- -->
       <ion-col size="6">
         <div class="rectangle-avatar">
-          <ion-img src="assets/img/extra.png" alt="Foto"></ion-img>
+          <!-- MODIFICACIONES----------------------------------------------------------- -->
+          <ion-img [src]="'assets/img/extra-' + ((i % 4) + 1) + '.png'" alt="Foto"></ion-img>
+          <!-- MODIFICACIONES----------------------------------------------------------- -->
         </div>
       </ion-col>
 
       <ion-col size="8">
         <ion-label class="ion-text-wrap">
-          <h2 class="extracurricular-text">{{extra.ext_name}}</h2>
-          <h2 class="extracurricular-code">{{extra.ext_code}}</h2>
-          <h2 class="extracurricular-info">
-            {{extra.ext_date | date: 'dd/MM/y'}}
-          </h2>
-          <h2 class="extracurricular-info">{{extra.ext_time}}</h2>
-          <h2 class="extracurricular-info">{{extra.ext_place}}</h2>
+          <h2 class="extracurricular-text">{{extras.ext_name}}</h2>
+          <h2 class="extracurricular-code">{{extras.ext_code}}</h2>
+          <!-- MODIFICACIONES----------------------------------------------------------- -->
+          <!-- MODIFICACIONES----------------------------------------------------------- -->
         </ion-label>
       </ion-col>
 
       <ion-col>
-        <ion-button id="click-trigger-{{extra.extgro_id}}">
+        <ion-button id="click-trigger-{{extras.extgro_id}}-{{i}}">
           <ion-icon name="ellipsis-vertical"></ion-icon>
         </ion-button>
         <ion-popover
-          trigger="click-trigger-{{extra.extgro_id}}"
+          trigger="click-trigger-{{extras.extgro_id}}-{{i}}"
           [dismissOnSelect]="true"
           [keepContentsMounted]="true"
           side="end">
@@ -47,21 +48,21 @@
                 <ion-item 
                 [button]="true" 
                 [detail]="false"
-                (click)="eliminar(extra.extgro_id, extra.ext_code)"> 
+                (click)="alertEliminar(extras.extgro_id, extras.ext_name, extras.ext_code)"> 
                 <ion-icon name="trash"></ion-icon>
                 Eliminar
                 </ion-item>
                 <ion-item
                   [button]="true"
                   [detail]="false"
-                  (click)="editar(extra.extgro_fkextracurricular)"> 
+                  (click)="editar(extras.extgro_fkextracurricular)"> 
                   <ion-icon name="create"></ion-icon>
                   Modificar 
                 </ion-item>
                 <ion-item
                   [button]="true"
                   [detail]="false"
-                  [routerLink]="['extracurricular', extra.extgro_id]"> 
+                  [routerLink]="['extracurricular', extras.extgro_id]"> 
                   <ion-icon name="eye"></ion-icon>
                   Ver mas 
                 </ion-item>
@@ -88,12 +89,15 @@
       <ion-fab-button (click)="new()">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="trash"></ion-icon>
+      <!-- MODIFICACIONES----------------------------------------------------------- -->
+      <ion-fab-button [routerLink]="['events']">
+        <ion-icon name="school"></ion-icon>
+        <!-- MODIFICACIONES----------------------------------------------------------- -->
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
-
-  <app-paginacion [total]="totalEventos" (click)="pagina($event)"></app-paginacion>
+  <!-- MODIFICACIONES----------------------------------------------------------- -->
+  <app-paginacion [total]="totalExtracurriculares" (click)="pagina($event)"></app-paginacion>
+  <!-- MODIFICACIONES----------------------------------------------------------- -->
 
 </ion-content>
